# Psychological-scheduling

./: .gitignore  Docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: dependencies.py  router.py
app/api/v1/endpoints/: users.py
app/api/v1/repositories/: auth_repo.py  user_repo.py
app/api/v1/services/: auth_service.py  user_service.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  appointments_models.py  avaliabilites_models.py  paymentes_models.py  psychologist_models.py  service_models.py  users_models.py
app/redis/: session.py
app/schemas/: custom_schema.py  user_schema.py
migrations/: env.py
migrations/versions/: 7ed80f7339b4__fix_relationships_and_cascades.py  8a4512f62a98_feat_add_column_fullname.py  a28bd8203b7f_.py
tests/: conftest.py  test_schemas.py  test_users.py
